--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
-          <small>Copyright ©Khyateh Consulting 2017</small>
+          <small>Copyright ©Verichain</small>
         </div>
       </div>
     </footer>
