Update landing page

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                   <a class="nav-link" href="#advisorsSection" data-langswitch="1" data-langToken="team">Team</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#docSection" data-langswitch="1" data-langToken="whitePaper">White Paper</a>
+                  <a class="nav-link" href="#docSection" data-langswitch="1" data-langToken="whitePaper">Related Work</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#githubSection" data-langswitch="1" data-langToken="github">Github</a>
@@ -267,7 +267,10 @@
                 <div class="spnDetailBox">
                   <h4 data-langswitch="1" data-langToken="spnUtilHead4">Create Reliable Reputation and Feedback System</h4>
                   <ul>
-                    <li data-langswitch="1" data-langToken="spnUtilBody4_1">Description</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody4_1">Require registration based on unique UID on blockchain</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody4_1">Each IoT device will be associated with its owner's UID</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody4_1">Reputation is automatically assigned based on success of auction to prevent user manipulation and collusion</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody4_1">Strikes assigned based on failure to provide valid data or failure to validate data.</li>
                   </ul>
                 </div>
               </div>
@@ -377,21 +380,21 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2 class="sectionTitle" data-langswitch="1" data-langToken="documentation">Documentation</h2>
+          <h2 class="sectionTitle" data-langswitch="1" data-langToken="documentation">Related Work</h2>
         </div>
         <div class="col-md-6">
           <div class="documentBoxExt">
-            <a href="assets/verichain.pdf" target="_blank">
-              <img src="assets/verichain.png" alt="Proposal">
-              <h4>Proposal</h4>
+            <a href="assets/enigma.pdf" target="_blank">
+              <img src="assets/enigma.png" alt="Enigma">
+              <h4>Engima</h4>
             </a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="documentBoxExt">
-            <a href="assets/verichain.pdf" target="_blank">
-              <img src="assets/verichain.png" alt="Final Paper">
-              <h4>Final Paper</h4>
+            <a href="assets/iota.pdf" target="_blank">
+              <img src="assets/iota.png" alt="IOTA">
+              <h4>IOTA</h4>
             </a>
           </div>
         </div>
@@ -677,7 +680,7 @@
                 <a href="#spnSection" data-langswitch="1" data-langToken="spn">Goals</a>
               </li>
               <li>
-                <a href="#docSection" data-langswitch="1" data-langToken="whitePaper">White Paper</a>
+                <a href="#docSection" data-langswitch="1" data-langToken="whitePaper">Related Work</a>
               </li>
               <li>
                 <a href="#githubSection" data-langswitch="1" data-langToken="github">Github</a>
