--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -227,9 +227,11 @@
             <div class="col-md-8">
               <div class="spnDetailBoxExt">
                 <div class="spnDetailBox">
-                  <h4 data-langswitch="1" data-langToken="spnUtilHead3">Build a Robust Marketplace and Incentivize User Contributions</h4>
+                  <h4 data-langswitch="1" data-langToken="spnUtilHead3">Build a Robust Data Marketplace and Incentivize Users</h4>
                   <ul>
-                    <li data-langswitch="1" data-langToken="spnUtilBody3_1">Description</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody3_1">Create a marketplace that facilitates batch purchasing of data from IoT end users</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody3_1">Target high value IoT device users (e.g. smart speakers) generating high-value, exclusive data that non-corporate consumers currently cannot access due to corporate data monopolization</li>
+                    <li data-langswitch="1" data-langToken="spnUtilBody3_1">Establish user trust by implementing reputation system to economically discourage dishonest players</li>
                   </ul>
                 </div>
               </div>
@@ -237,25 +239,6 @@
             <div class="col-md-4">
               <div id="graphic1" class="imageBoxExt">
                 <img src="images/graphic1.png" alt="Image" data-remodal-target="graphicModal2">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-8">
-              <div class="spnDetailBoxExt">
-                <div class="spnDetailBox">
-                  <h4 data-langswitch="1" data-langToken="spnUtilHead2">Target High-Value IoT Devices</h4>
-                  <ul>
-                    <li data-langswitch="1" data-langToken="spnUtilBody2_1">Description</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div id="graphpic2" class="imageBoxExt">
-                <img src="images/graphic2.png" alt="Image" data-remodal-target="graphicModal1">
               </div>
             </div>
           </div>
